karnc/tests/fixtures/positive/126_http_result_variants/src/api.karn
context api

service routes from http {
  on GET("/created") () -> Effect[HttpResult[String]] {
    Created("created")
  }

  on GET("/nocontent") () -> Effect[HttpResult[String]] {
    NoContent
  }

  on GET("/badrequest") () -> Effect[HttpResult[String]] {
    BadRequest("bad request")
  }

  on GET("/unauthorized") () -> Effect[HttpResult[String]] {
    Unauthorized
  }

  on GET("/forbidden") () -> Effect[HttpResult[String]] {
    Forbidden
  }

  on GET("/notfound") () -> Effect[HttpResult[String]] {
    NotFound
  }

  on GET("/conflict") () -> Effect[HttpResult[String]] {
    Conflict("conflict")
  }

  on GET("/unprocessable") () -> Effect[HttpResult[String]] {
    UnprocessableEntity("invalid")
  }

  on GET("/servererror") () -> Effect[HttpResult[String]] {
    ServerError("oops")
  }
}
