karnc/tests/fixtures/negative/96_http_extra_param/src/svc.karn
context svc

service api from http {
  on GET("/orders") by v: Visitor (extra: String) -> Effect[HttpResult[String]] {
    Ok("none")
  }
}
